Added busy indicator for ViewerPage. A little code refactoring. Moved the back button visibility code to the NavigationHelper class. When the application gets file activated it doesn't copy the file to the local storage. Added a notification to add the file to the library. The license check code was rewritten in C#.

--- a/DjvuApp.Universal/DjvuApp.Universal.csproj
+++ b/DjvuApp.Universal/DjvuApp.Universal.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Common\BooleanToVisibilityConverter.cs" />
     <Compile Include="Common\INavigationService.cs" />
     <Compile Include="Common\IsNullOrEmptyToVisibilityConverter.cs" />
+    <Compile Include="Common\LicenseValidator.cs" />
     <Compile Include="Common\MenuFlyoutService.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\NavigationService.cs" />
