--- a/DjvuApp.Universal/DjvuApp.Universal.csproj
+++ b/DjvuApp.Universal/DjvuApp.Universal.csproj
@@ -106,6 +106,9 @@
     <Compile Include="Common\BooleanToVisibilityConverter.cs" />
     <Compile Include="Common\INavigationService.cs" />
     <Compile Include="Common\IsNullOrEmptyToVisibilityConverter.cs" />
+    <Compile Include="Controls\BookView.xaml.cs">
+      <DependentUpon>BookView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Misc\LicenseValidator.cs" />
     <Compile Include="Common\MenuFlyoutService.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
@@ -217,6 +220,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\BookView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\PageViewControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
