Initial text selection implementation.

--- a/DjvuApp.Universal/DjvuApp.Universal.csproj
+++ b/DjvuApp.Universal/DjvuApp.Universal.csproj
@@ -111,13 +111,17 @@
       <DependentUpon>BookView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\PageLoadObserver.cs" />
+    <Compile Include="Controls\SelectionMarker.cs" />
+    <Compile Include="Controls\TextLayerPresenter.xaml.cs">
+      <DependentUpon>TextLayerPresenter.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\PageViewObserver.cs" />
     <Compile Include="Misc\LicenseValidator.cs" />
     <Compile Include="Common\MenuFlyoutService.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\NavigationService.cs" />
     <Compile Include="Common\StringFormatConverter.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
-    <Compile Include="Controls\IZoomFactorObserver.cs" />
     <Compile Include="Controls\PageViewControl.xaml.cs">
       <DependentUpon>PageViewControl.xaml</DependentUpon>
     </Compile>
@@ -235,6 +239,10 @@
     <Page Include="Controls\ReaderControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\TextLayerPresenter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Dialogs\Internal\BusyIndicatorInternal.xaml">
       <SubType>Designer</SubType>
