--- a/DjvuApp.WindowsPhone/DjvuApp.WindowsPhone.csproj
+++ b/DjvuApp.WindowsPhone/DjvuApp.WindowsPhone.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Common\StatusBarBehavior.cs" />
     <Compile Include="Common\StringFormatConverter.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="Controls\PageLoadObserver.cs" />
     <Compile Include="Controls\PageViewControl.xaml.cs">
       <DependentUpon>PageViewControl.xaml</DependentUpon>
     </Compile>
@@ -112,16 +113,15 @@
     <Compile Include="Controls\ReaderControl.xaml.cs">
       <DependentUpon>ReaderControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\IZoomFactorObserver.cs" />
+    <Compile Include="Controls\PageViewObserver.cs" />
+    <Compile Include="Controls\SearchHelper.cs" />
+    <Compile Include="Controls\SelectionMarker.cs" />
     <Compile Include="Dialogs\CreateBookmarkDialog.cs" />
     <Compile Include="Dialogs\Internal\CreateBookmarkDialogInternal.xaml.cs">
       <DependentUpon>CreateBookmarkDialogInternal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\Internal\JumpToPageDialogInternal.xaml.cs">
       <DependentUpon>JumpToPageDialogInternal.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\Internal\OutlineDialogInternal.xaml.cs">
-      <DependentUpon>OutlineDialogInternal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\Internal\RenameDialogInternal.xaml.cs">
       <DependentUpon>RenameDialogInternal.xaml</DependentUpon>
@@ -130,21 +130,17 @@
       <DependentUpon>SelectBookmarkDialogInternal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\JumpToPageDialog.cs" />
-    <Compile Include="Dialogs\OutlineDialog.cs" />
+    <Compile Include="Dialogs\Internal\OutlineDialogInternal.xaml.cs">
+      <DependentUpon>OutlineDialogInternal.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\RenameDialog.cs" />
     <Compile Include="Dialogs\SelectBookmarkDialog.cs" />
+    <Compile Include="Misc\FrameworkElementExtensions.cs" />
     <Compile Include="Misc\IocContainer.cs" />
     <Compile Include="Misc\SQLite.cs" />
     <Compile Include="Misc\SQLiteAsync.cs" />
     <Compile Include="Misc\TextBoxExtensions.cs" />
     <Compile Include="Misc\ViewModelLocator.cs" />
-    <Compile Include="Model\Books\CachedSqliteBookProvider.cs" />
-    <Compile Include="Model\Books\DataContractBookProvider.cs" />
-    <Compile Include="Model\Books\IBook.cs" />
-    <Compile Include="Model\Books\IBookmark.cs" />
-    <Compile Include="Model\Books\IBookProvider.cs" />
-    <Compile Include="Model\Books\SqliteBookProvider.cs" />
-    <Compile Include="Model\Outline\IOutlineSection.cs" />
     <Compile Include="Pages\AboutPage.xaml.cs">
       <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
@@ -211,15 +207,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Dialogs\Internal\OutlineDialogInternal.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Dialogs\Internal\RenameDialogInternal.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Dialogs\Internal\SelectBookmarkDialogInternal.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Dialogs\Internal\OutlineDialogInternal.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -317,6 +313,7 @@
       <Name>SQLite for Windows Phone 8.1</Name>
     </SDKReference>
   </ItemGroup>
+  <Import Project="..\DjvuApp.Shared\DjvuApp.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
