--- a/DjvuLib/DjvuLib.Universal/DjvuLib.Universal.vcxproj
+++ b/DjvuLib/DjvuLib.Universal/DjvuLib.Universal.vcxproj
@@ -77,7 +77,7 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
-    <Import Project="..\DjvuLib\DjvuLib.Shared\DjvuLib.Shared.vcxitems" Label="Shared" />
+    <Import Project="..\DjvuLib.Shared\DjvuLib.Shared.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
