--- a/DjvuApp.Universal/project.json
+++ b/DjvuApp.Universal/project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
     "JetBrains.Annotations": "10.0.0",
+    "Microsoft.ApplicationInsights": "1.2.3",
+    "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
+    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "MvvmLightLibs": "5.2.0",
     "Unity": "4.0.1",
