Fix Application Insights

--- a/DjvuApp.Universal/ApplicationInsights.config
+++ b/DjvuApp.Universal/ApplicationInsights.config
@@ -1,3 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns = "http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
+  <InstrumentationKey>4d4085d1-a2dc-475f-8132-97a3c236a374</InstrumentationKey>
 </ApplicationInsights>
