Refactor the dialog related code

--- a/DjvuApp.Universal/DjvuApp.Universal.csproj
+++ b/DjvuApp.Universal/DjvuApp.Universal.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Controls\SisPageRenderer.cs" />
     <Compile Include="Controls\VsisPageRenderer.cs" />
     <Compile Include="Controls\SearchHelper.cs" />
+    <Compile Include="Dialogs\DialogManager.cs" />
     <Compile Include="Dialogs\Internal\OutlineDialogInternal.xaml.cs">
       <DependentUpon>OutlineDialogInternal.xaml</DependentUpon>
     </Compile>
